# boflink

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
crates/coffyaml/: Cargo.toml  README.md
crates/coffyaml/src/: lib.rs
crates/coffyaml/src/archive/builder/: armap.rs  gnu.rs  longnames.rs  mod.rs  msvc.rs  sorted_armap.rs
crates/coffyaml/src/coff/: errors.rs  header.rs  mod.rs  sections.rs  symbols.rs
crates/coffyaml/src/importlib/: archconfig.rs  build.rs  errors.rs  legacy_build.rs  mod.rs
crates/coffyaml/tests/: coff.rs  coff.yaml  importlib.rs  importlib.yaml
crates/jamcrc/: Cargo.toml  README.md
crates/jamcrc/cli/: Cargo.toml
crates/jamcrc/cli/src/: hexstream.rs  main.rs
crates/jamcrc/src/: lib.rs
crates/objs2yaml/: Cargo.toml  README.md
crates/objs2yaml/src/: main.rs
examples/basic/: README.md  basic.c  compile-clang.sh  compile-mingw.sh  compile-msvc.ps1
examples/custom-api/: README.md  compile-clang.sh  compile-mingw.sh  compile-msvc.ps1  custom-api.c  myapi.def  myapi.h
examples/multiple-sources/: README.md  compile-clang.sh  compile-mingw.sh  compile-msvc.ps1  go.c  other.c  other.h
src/: lib.rs  libsearch.rs  pathed_item.rs
src/api/: beaconapi.rs  error.rs  mod.rs  traits.rs
src/drectve/: mod.rs  parsers.rs
src/graph/: built.rs  cache.rs  edge.rs  link.rs  mod.rs  spec.rs
src/graph/node/: coff.rs  library.rs  mod.rs  section.rs  symbol.rs
src/linker/: builder.rs  configured.rs  error.rs  mod.rs
src/linkobject/: import.rs  mod.rs
src/linkobject/archive/: error.rs  legacy_importlib.rs  mod.rs
tests/: integration_tests.rs
tests/bss/: commons.yaml  merged.yaml  mod.rs  resized.yaml
tests/comdats/: any.yaml  associative.yaml  mod.rs
tests/compilers/: mod.rs
tests/compilers/clang/: amd64_gnuabi_empty.yaml  i386_gnuabi_empty.yaml  mod.rs
tests/compilers/mingw/: amd64_empty.yaml  i386_empty.yaml
tests/compilers/msvc/: amd64_empty.yaml  i386_empty.yaml  mod.rs
tests/imports/: import_thunks.yaml  library_prefix.yaml  mod.rs
tests/relocations/: defined_symbol_target_no_shift.yaml  mod.rs  same_section_flattened.yaml  section_target_shifted.yaml
tests/utils/: archive_searcher.rs  build.rs  macros.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs  tasks.rs
xtask/src/utils/: metadata.rs  mod.rs  shell.rs
xtask/src/utils/env/: exe.rs  mod.rs
