[workspace]
members = [
  "crates/*",
  "crates/jamcrc/cli",
  "xtask",
]

[package]
name = "boflink"
version = "0.1.0"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = """
Linker for Beacon Object Files.
"""
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink"
repository = "https://github.com/MEhrn00/boflink"
license = "BSD-3-Clause"
publish = false


[dependencies]
anyhow = "1.0.92"
argfile = "0.2.1"
bitflags = "2.9.0"
bumpalo = "3.17.0"
clap-verbosity-flag = "3.0.2"
indexmap = "2.7.1"
jamcrc = { path = "crates/jamcrc" }
log = { version = "0.4.26", features = ["std"] }
num_enum = "0.7.3"
termcolor = "1.4.1"
thiserror = "2.0.11"
typed-arena = "2.0.2"

[dependencies.clap]
version = "4.5.24"
default-features = false
features = ["std", "color", "help", "suggestions", "usage", "derive"]

[dependencies.object]
version = "0.37.0"
default-features = false
features = ["archive", "coff", "write", "read"]

[dev-dependencies]
coffyaml = { path = "crates/coffyaml" }
serde = "1"
serde_yml = "0.0.12"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
