[package]
name = "coffyaml"
version = "0.1.0"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
description = """
Library for generating COFFs from LLVM's yaml2obj YAML description files.
"""
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink/tree/main/crates/coffyaml"
repository = "https://github.com/MEhrn00/boflink"
publish = false

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0.12"
typed-arena = "2.0.2"

[dependencies.object]
version = "0.37.0"
default-features = false
features = ["coff", "archive", "write", "read"]

[lints.rust]
unsafe_code = "forbid"
