[package]
name = "jamcrc"
version = "0.1.0"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
description = "JamCRC checksum calculation"
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink/tree/main/crates/jamcrc"
repository = "https://github.com/MEhrn00/boflink"
publish = false

[dependencies]
crc32fast = "1.4.2"
