[package]
name = "objs2yaml"
version = "0.1.0"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
description = """
Generates test data yaml files from a collection of COFFs and import libraries.
"""
readme = "README.md"
homepage = "https://github.com/MEhrn00/boflink/tree/main/crates/objs2yaml"
repository = "https://github.com/MEhrn00/boflink"
publish = false

[dependencies]
anyhow = "1.0.92"
coffyaml = { path = "../coffyaml" }
serde = "1"
serde_yml = "0.0.12"

[dependencies.clap]
version = "4.5.24"
default-features = false
features = ["std", "help", "usage", "derive"]

[dependencies.object]
version = "0.37.0"
default-features = false
features = ["archive", "coff", "write", "read"]

[lints.rust]
unsafe_code = "forbid"
