[package]
name = "jamcrc-cli"
version = "0.1.0"
authors = ["Matt Ehrnschwender <matthewe2020@gmail.com>"]
edition = "2024"
description = """
Command line tool for calculating JamCRC checksums.
"""
homepage = "https://github.com/MEhrn00/boflink/tree/main/crates/jamcrc/cli"
repository = "https://github.com/MEhrn00/boflink"
publish = false

[dependencies]
anyhow = "1.0.98"
hex = "0.4.3"
jamcrc = { path = ".." }

[dependencies.clap]
version = "4.5.38"
default-features = false
features = ["std", "help", "usage", "derive"]

[lints.rust]
unsafe_code = "forbid"
